# nachi-experimental

nachi_mz07_support/: CMakeLists.txt  package.xml
nachi_mz07_support/cmake/: nachi_mz07_supportConfig.cmake
nachi_mz07_support/launch/: load_mz07.launch  load_mz07l_001.launch  test_mz07.launch  test_mz07l_001.launch
nachi_mz07_support/meshes/mz07/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
nachi_mz07_support/meshes/mz07/visual/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
nachi_mz07_support/meshes/mz07l_001/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
nachi_mz07_support/meshes/mz07l_001/visual/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
nachi_mz07_support/urdf/: mz07.xacro  mz07_macro.xacro  mz07l_001.xacro  mz07l_001_macro.xacro
