<?xml version="1.0"?>
<package format="2">
  <name>nachi_mz07_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the Nachi MZ07 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Nachi MZ07 manipulators. This currently includes the Nachi MZ07-001 and MZ07L-001.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>MZ07-01 - Default</li>
      <li>MZ07L-01 - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information
      found in datasheet <em>MMZEN-265-015_MZ07_MZ03EL-MZ10-01_-11_CFD_FD</em>, version <em>15th edition</em>.
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Simon Schmeisser (Optonic)</author>
  <author>Timo Birnkraut (Optonic)</author>
  <maintainer email="timo.birnkraut@optonic.com">Timo Birnkraut (Optonic)</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
